--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <title>Editable Spots Map</title>
 <script src="https://apis.google.com/js/api.js"></script>
 <style>
+	* {
+  font-family: Arial, sans-serif; /* Or any fallback font */
+}
+
     /* Shared bar style for top and bottom bars */
     .bar {
         height: 50px; /* Default height */
