--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title>Editable Spots Map</title>
-<script src="https://apis.google.com/js/api.js"></script>
+<script src="https://apis.google.com/js/api.js" defer></script>
+
 <style>
 	
     /* Shared bar style for top and bottom bars */
@@ -286,7 +287,7 @@
         } else {
             initSpots();
         }
-    })catch(error => {
+    }).catch(error => {
     console.error('Error initializing Google API client:', error);
     alert(`Error initializing Google API client: ${JSON.stringify(error)}`);
 }
@@ -324,7 +325,7 @@
                         }
 
                         resolve();
-                    } catch (parseError) {
+                    } .catch (parseError) {
                         console.error("Error parsing file content:", parseError);
                         reject(parseError);
                     }
@@ -718,7 +719,7 @@ function saveSpotsToFile(spots) {
                             addMarker(spot, spots.length - 1);
                         });
                         alert("Spots imported successfully!");
-                    } catch (err) {
+                    } .catch (err) {
                         alert("Invalid JSON file.");
                     }
                 };
