--- a/index.html
+++ b/index.html
@@ -5,7 +5,19 @@
 <script src="https://accounts.google.com/gsi/client" async defer></script>
 
 <style>
-	
+
+	@font-face {
+  font-family: 'ProximaNova';
+  src: url('font/ProximaNova-Reg-webfont.woff2') format('woff2'),
+       url('font/ProximaNova-Bold-webfont.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
+body {
+  font-family: 'ProximaNova', sans-serif;
+}
+
     /* Shared bar style for top and bottom bars */
     .bar {
         height: 50px; /* Default height */
